# insurance-elasticity

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py
notebooks/: benchmark.py  insurance_elasticity_demo.py  run_tests.py  run_tests_databricks.py
src/insurance_elasticity/: __init__.py  data.py  demand.py  diagnostics.py  fit.py  optimise.py  surface.py
tests/: conftest.py  test_demand.py  test_diagnostics.py  test_fit.py  test_optimise.py  test_surface.py
