[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-elasticity"
version = "0.1.1"
description = "Causal price elasticity estimation and FCA-compliant renewal pricing optimisation for UK insurance"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "price elasticity",
    "causal inference",
    "DML",
    "double machine learning",
    "renewal pricing",
    "GIPP",
    "PS21/5",
    "ENBP",
    "CausalForest",
    "actuarial",
    "UK insurance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
causal = [
    "econml>=0.15",
    "catboost>=1.2",
]
plot = [
    "matplotlib>=3.7",
]
all = [
    "econml>=0.15",
    "catboost>=1.2",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pyarrow>=12.0",
    "pytest-cov>=4.0",
    "econml>=0.15",
    "catboost>=1.2",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-elasticity"
Issues = "https://github.com/burning-cost/insurance-elasticity/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_elasticity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
